# capstone

./: .env.example  .gitignore  .vercelignore  CONTRIBUTORS.md  LICENSE  README.md  backend_instructions.md  config.json  index.html  package-lock.json  package.json  redeploy_all.ps1  run_qa.ps1  setup_android_sdk.ps1  start_all.ps1  start_app.ps1  test.py  test_config.json  vercel.json  vite.config.js
backend/: .coverage  alembic.ini  coverage.json  echovolt.db  pyproject.toml  seed_demo_patient.py
backend/alembic/: env.py
backend/alembic/versions/: 85773b3f9abc_phase_2_migration.py  9f707ae3d4bd_phase_3_migration.py  d75526995b69_initial_phase_1_accounts_migration.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: activities.py  ai.py  auth.py  checkins.py  health.py  notifications.py  screenings.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  activity.py  ai.py  checkin.py  health.py  notification.py  screening.py  user.py
backend/app/schemas/: activity.py  ai.py  checkin.py  health.py  notification.py  screening.py  user.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py  test_coverage.py
files/: app_complete.jsx  app_part1.jsx  app_part2.jsx  app_part3.jsx  app_part4.jsx
mobile/: theme.js
native_app/: App.js  app.json  build_apk.ps1  eas.json  package-lock.json  package.json  start_expo_tunnel.py
public/: app-release.apk
qa/: run_qa.ps1  test_runner.cjs
src/: App.jsx  debug_lines.txt  (+1 more)
(+89 files in other folders)
